<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity.SignupActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:src="@drawable/city"
        android:contentDescription="@string/empty_description"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView

        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/empty_description"
        android:src="@drawable/ic_travelguru__logo_" />
        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_firstname_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="none"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/input_firstname_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:drawableBottom="@drawable/bg_line"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_lastname_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="none"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/input_lastname_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:drawableBottom="@drawable/bg_line"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/input_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:drawableBottom="@drawable/bg_line"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_pass_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="none"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/input_pass_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:drawableBottom="@drawable/bg_line"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_confirm_pass_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="none"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/input_confirm_pass_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:drawableBottom="@drawable/bg_line"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.dd.processbutton.FlatButton
                android:id="@+id/ok_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#03A9F4"
                android:padding="10dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                custom:pb_colorNormal="@android:color/holo_blue_light"
                custom:pb_colorPressed="@android:color/holo_blue_dark" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="start"
                android:text="@string/text_login"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>